# communication

./: .env.example  pyproject.toml  pyrightconfig.json
app/: container.py  main.py  migrate.py
app/adapters/inbound/: generate_handler.py
app/adapters/inbound/amqp/handlers/: generate.py  send_message.py
app/adapters/inbound/http/: server.py
app/adapters/inbound/http/integrations/meta/: routes.py  schemas.py
app/adapters/outbound/http/: meta_whatsapp.py
app/adapters/outbound/postgres/: __init__.py
app/adapters/outbound/s3/: media_storage.py
app/domain/entities/: channel.py  generate.py  message.py
app/domain/services/: meta_webhook_processor.py
app/infrastructure/config/: settings.py
app/infrastructure/database/: __init__.py
app/ports/outbound/: media_storage.py
app/workers/: __init__.py  generate.py  send_message.py
migrations/: 001_channel_events.sql
